--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 lost thing thing server/.vs/
+lost thing thing server/x64/
+lost thing thing server/LTTServerC/x64/
+lost thing thing server/LTTServer/bin/
+lost thing thing server/LTTServer/obj/
