--- a/lost thing thing server/LTTServerC/LTTServerC.vcxproj.filters
+++ b/lost thing thing server/LTTServerC/LTTServerC.vcxproj.filters
@@ -42,9 +42,6 @@
     <ClCompile Include="LTTServerC.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="LttString.c">
-      <Filter>Source Files\DataStructures\String</Filter>
-    </ClCompile>
     <ClCompile Include="ErrorCodes.c">
       <Filter>Source Files\Errors</Filter>
     </ClCompile>
@@ -60,11 +57,11 @@
     <ClCompile Include="HttpListener.c">
       <Filter>Source Files\HttpListener</Filter>
     </ClCompile>
+    <ClCompile Include="Directory.c">
+      <Filter>Source Files\IO</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="LttString.h">
-      <Filter>Source Files\DataStructures\String</Filter>
-    </ClInclude>
     <ClInclude Include="ErrorCodes.h">
       <Filter>Source Files\Errors</Filter>
     </ClInclude>
@@ -82,6 +79,9 @@
     </ClInclude>
     <ClInclude Include="HttpListener.h">
       <Filter>Source Files\HttpListener</Filter>
+    </ClInclude>
+    <ClInclude Include="Directory.h">
+      <Filter>Source Files\IO</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
