Added some stuff (stringbuilder and more directory options)

--- a/lost thing thing server/LTTServerC/LTTServerC.vcxproj
+++ b/lost thing thing server/LTTServerC/LTTServerC.vcxproj
@@ -143,6 +143,8 @@
     <ClInclude Include="ErrorCodes.h" />
     <ClInclude Include="File.h" />
     <ClInclude Include="HttpListener.h" />
+    <ClInclude Include="LttCommon.h" />
+    <ClInclude Include="LttIO.h" />
     <ClInclude Include="LttString.h" />
     <ClInclude Include="Math.h" />
     <ClInclude Include="Memory.h" />
