--- a/lost thing thing server/LTTServerC/LTTServerC.vcxproj
+++ b/lost thing thing server/LTTServerC/LTTServerC.vcxproj
@@ -153,7 +153,7 @@
     <ClInclude Include="HttpListener.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="LttCommon.h" />
-    <ClInclude Include="LttIO.h" />
+    <ClInclude Include="LTTHTML.h" />
     <ClInclude Include="LttString.h" />
     <ClInclude Include="Math.h" />
     <ClInclude Include="Memory.h" />
