--- a/lost thing thing server/LTTServerC/LTTServerC.vcxproj.filters
+++ b/lost thing thing server/LTTServerC/LTTServerC.vcxproj.filters
@@ -65,6 +65,9 @@
     <ClCompile Include="Logger.c">
       <Filter>Source Files\IO\Logger</Filter>
     </ClCompile>
+    <ClCompile Include="ConfigFile.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LttErrors.h">
@@ -96,6 +99,9 @@
     </ClInclude>
     <ClInclude Include="LTTHTML.h">
       <Filter>Source Files\HTML</Filter>
+    </ClInclude>
+    <ClInclude Include="ConfigFile.h">
+      <Filter>Source Files\IO</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
