--- a/lost thing thing server/LTTServerC/LTTServerC.vcxproj.filters
+++ b/lost thing thing server/LTTServerC/LTTServerC.vcxproj.filters
@@ -109,5 +109,8 @@
     <ClInclude Include="LTTServerResourceManager.h">
       <Filter>Source Files\HttpListener</Filter>
     </ClInclude>
+    <ClInclude Include="LTTServerC.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
