--- a/lost thing thing server/LTTServerC/LTTServerC.vcxproj.filters
+++ b/lost thing thing server/LTTServerC/LTTServerC.vcxproj.filters
@@ -112,5 +112,8 @@
     <ClInclude Include="LTTServerC.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="GHDF.h">
+      <Filter>Source Files\IO</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
