--- a/lost thing thing server/LTTServerC/LTTServerC.vcxproj
+++ b/lost thing thing server/LTTServerC/LTTServerC.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="LTTJSON.c" />
     <ClCompile Include="LTTServerC.c" />
     <ClCompile Include="LTTServerResourceManager.c" />
+    <ClCompile Include="LTTSMTP.c" />
     <ClCompile Include="LttString.c" />
     <ClCompile Include="LTTMath.c" />
     <ClCompile Include="Memory.c" />
@@ -173,10 +174,10 @@
     <ClInclude Include="File.h" />
     <ClInclude Include="HttpListener.h" />
     <ClInclude Include="Logger.h" />
-    <ClInclude Include="LttCommon.h" />
     <ClInclude Include="LTTHTML.h" />
     <ClInclude Include="LTTJSON.h" />
     <ClInclude Include="LTTServerC.h" />
+    <ClInclude Include="LTTSMTP.h" />
     <ClInclude Include="LttString.h" />
     <ClInclude Include="LTTMath.h" />
     <ClInclude Include="Memory.h" />
