--- a/lost thing thing server/LTTServerC/LTTServerC.vcxproj.filters
+++ b/lost thing thing server/LTTServerC/LTTServerC.vcxproj.filters
@@ -36,6 +36,9 @@
     <Filter Include="Source Files\JSON">
       <UniqueIdentifier>{62973ba3-fd05-4ece-8ca7-c4c7460d4171}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\HttpListener\Database">
+      <UniqueIdentifier>{4d62ae3a-f3c8-4438-a537-2058ce82b989}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LTTServerC.c">
@@ -68,9 +71,6 @@
     <ClCompile Include="LTTHTML.c">
       <Filter>Source Files\HTML</Filter>
     </ClCompile>
-    <ClCompile Include="LTTServerResourceManager.c">
-      <Filter>Source Files\HttpListener</Filter>
-    </ClCompile>
     <ClCompile Include="LTTChar.c">
       <Filter>Source Files\String</Filter>
     </ClCompile>
@@ -91,6 +91,12 @@
     </ClCompile>
     <ClCompile Include="ConfigFile.c">
       <Filter>Source Files\IO</Filter>
+    </ClCompile>
+    <ClCompile Include="LTTServerResourceManager.c">
+      <Filter>Source Files\HttpListener\Database</Filter>
+    </ClCompile>
+    <ClCompile Include="LTTAccountManager.c">
+      <Filter>Source Files\HttpListener\Database</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -124,9 +130,6 @@
     <ClInclude Include="ConfigFile.h">
       <Filter>Source Files\IO</Filter>
     </ClInclude>
-    <ClInclude Include="LTTServerResourceManager.h">
-      <Filter>Source Files\HttpListener</Filter>
-    </ClInclude>
     <ClInclude Include="LTTServerC.h">
       <Filter>Source Files</Filter>
     </ClInclude>
@@ -141,6 +144,12 @@
     </ClInclude>
     <ClInclude Include="LTTSMTP.h">
       <Filter>Source Files\HttpListener</Filter>
+    </ClInclude>
+    <ClInclude Include="LTTServerResourceManager.h">
+      <Filter>Source Files\HttpListener\Database</Filter>
+    </ClInclude>
+    <ClInclude Include="LTTAccountManager.h">
+      <Filter>Source Files\HttpListener\Database</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
