--- a/lost thing thing server/LTTServerC/LTTServerC.vcxproj
+++ b/lost thing thing server/LTTServerC/LTTServerC.vcxproj
@@ -189,6 +189,9 @@
     <ClInclude Include="Memory.h" />
     <ClInclude Include="LTTServerResourceManager.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="DatabaseCommonFunctions.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
